src/css/style.styl
// Variables

// Color
$grey = #68626E
$purple = #6D36A0

// Fonts
$text-size = 1.4em
$title-size = 3em
$font-family = 'Montserrat', sans-serif
$text = $text-size $font-family
$title = $title-size $font-family

*
    margin 0
    padding 0
    // cursor none
    scroll-behavior smooth
    user-select none
    overflow-x hidden

.aside
    position fixed
    height 100vh
    left 2vw
    display flex
    flex-direction column
    justify-content center
    img
        width 8vw
        position fixed
        top 5vh
    nav
        height 20%
        position relative
        &::after
            content ""
            height 200%
            width 1px
            position absolute
            right -50%
            top -50%
            background $grey
        ul
            height 100%
            display flex
            flex-direction column
            list-style none
            justify-content space-between
            li
                padding-bottom 20px
                a
                    color $grey
                    text-decoration none
                    font $text
                    transition 0.5s
                    position relative
                    &::after
                        content ""
                        height 1px
                        width 30%
                        position absolute
                        left -2px
                        bottom -2px
                        transform translateX(-100%)
                        background $purple
                        opacity 0
                        transition all 0.3s
                    &:hover, &.active
                        color $purple
                        &::after
                            transform translateX(0)
                            opacity 1
.mouse
    position fixed
    width 50px
    height 50px
    border solid 0.5px black
    border-radius 100%
    z-index -1
    transition transform 0.1s
    &.hover
        transform scale(1.5)
        


header
    height 100vh
    width 100vw
    display flex
    justify-content center
    align-items center
    text-align center
    .content
        h2
            color $purple
            font-family $font-family
            font-weight bold
            font-size 50px
            text-align left
        p
            color $grey
            font $text
    canvas
        position absolute
        z-index -1
main
    .project
        display flex
        flex-direction row
        justify-content space-between
        margin 10vw 5vw 10vw 12vw
        overflow visible
        .img
            width 50%
            position relative
            text-align center
            text-decoration none
            overflow hidden
            img
                width 100%
            &::after
                content ""
                position absolute
                left 0
                width 100%
                height 100%
                background-color #fff
                opacity 0.8
                transform scaleY(0)
                transform-origin bottom
                transition 0.3s
                will-change transform
            &:hover::after
                transform scaleY(1)
            .imgText
                position absolute
                text-transform uppercase
                color $purple
                font-size 2rem
                font-family $font-family
                transform translateY(-50%)
                opacity 0
                transition 0.3s
                z-index -10
                width 100%
                height 100%
                vertical-align middle
            &:hover .imgText
                opacity 1
                z-index 10
        .content
            display flex
            flex-direction: column
            width 40%
            overflow visible
            h3
                font-size 6em
                font-family $font-family
                position relative
                width fit-content
                &::after
                    content ""
                    position absolute
                    width 100%
                    height 10%
                    background-color $purple
                    bottom 15%
                    left 0
                    opacity 0.5
            .text
                width 86%
                padding-left 5vw
                margin-top 5vh
                position relative
                overflow visible
                h2
                    font $title
                    font-weight 600
                p
                    font $text
                    padding-top 2vh
                a
                    color black
                    text-decoration none
                    font $text
                    text-transform uppercase
                    margin-top 10%
                    position absolute
footer 
    margin 0 auto
    width 60vw
    ul
        font $text
        display flex
        flex-direction row
        justify-content space-between
        list-style none
        width 100%
        li
            a
                text-decoration none
                color #000
                position relative
    
    p
        margin 5vh 0
        font-family $font-family
        color $grey
        font-size 0.8rem
        text-align center

.link
    &::after
        content ""
        width 30%
        height 2px
        position absolute
        bottom 0
        left 0
        background-color $purple
        transform scaleX(0)
        transform-origin left
        transition transform 0.3s
        will-change transform
    &:hover::after
        transform scaleX(1)

